@@ -611,50 +611,54 @@ if ( ! class_exists( 'WC_Facebook_Product' ) ) :
 
 
 		/**
-		 * Modify Woo variant/taxonomies to be FB compatible
-		 **/
+		 * Normalizes variant data for Facebook.
+		 *
+		 * @param array $product_data variation product data
+		 * @return array
+		 */
 		public function prepare_variants_for_item( &$product_data ) {
-			if ( ! WC_Facebookcommerce_Utils::is_variation_type(
-				$this->get_type()
-			) ) {
-				return;
+
+			/** @var \WC_Product_Variation $product */
+			$product = $this;
+
+			if ( ! $product->is_type( 'variation' ) ) {
+				return [];
 			}
 
-			$attributes = $this->get_variation_attributes();
+			$attributes = $product->get_variation_attributes();
+
 			if ( ! $attributes ) {
-				return;
+				return [];
 			}
 
 			$variant_names = array_keys( $attributes );
-			$variant_array = array();
+			$variant_array = [];
 
 			// Loop through variants (size, color, etc) if they exist
 			// For each product field type, pull the single variant
 			foreach ( $variant_names as $orig_name ) {
+
 				// Retrieve label name for attribute
 				$label = wc_attribute_label( $orig_name, $this );
 
 				// Clean up variant name (e.g. pa_color should be color)
 				// Replace "custom_data:foo" with just "foo" so we can use the key
 				// Product item API expects "custom_data" instead of "custom_data:foo"
-				$new_name = str_replace(
-					'custom_data:',
-					'',
-					WC_Facebookcommerce_Utils::sanitize_variant_name( $orig_name )
-				);
+				$new_name = str_replace( 'custom_data:', '', \WC_Facebookcommerce_Utils::sanitize_variant_name( $orig_name ) );
 
 				// Sometimes WC returns an array, sometimes it's an assoc array, depending
 				// on what type of taxonomy it's using.  array_values will guarantee we
 				// only get a flat array of values.
-				$options = $this->get_variant_option_name(
-					$label,
-					$attributes[ $orig_name ]
-				);
-				if ( isset( $options ) ) {
+				if ( $options = $this->get_variant_option_name( $label, $attributes[ $orig_name ] ) ) {
+
 					if ( is_array( $options ) ) {
+
 						$option_values = array_values( $options );
+
 					} else {
-						$option_values = array( $options );
+
+						$option_values = [ $options ];
+
 						// If this attribute has value 'any', options will be empty strings
 						// Redirect to product page to select variants.
 						// Reset checkout url since checkout_url (build from query data will
@@ -664,148 +668,158 @@ if ( ! class_exists( 'WC_Facebook_Product' ) ) :
 								$product_data['checkout_url'] = $product_data['url'];
 						}
 					}
-					if ( $new_name === WC_Facebookcommerce_Utils::FB_VARIANT_GENDER ) {
+
+					if ( \WC_Facebookcommerce_Utils::FB_VARIANT_GENDER === $new_name ) {
+
 						// If we can't validate the gender, this will be null.
-						$product_data[ $new_name ] =
-						WC_Facebookcommerce_Utils::validateGender( $option_values[0] );
+						$product_data[ $new_name ] = \WC_Facebookcommerce_Utils::validateGender( $option_values[0] );
 					}
 
 					switch ( $new_name ) {
-						case WC_Facebookcommerce_Utils::FB_VARIANT_SIZE:
-						case WC_Facebookcommerce_Utils::FB_VARIANT_COLOR:
-						case WC_Facebookcommerce_Utils::FB_VARIANT_PATTERN:
-							array_push(
-								$variant_array,
-								array(
-									'product_field' => $new_name,
-									'label'         => $label,
-									'options'       => $option_values,
-								)
-							);
+
+						case \WC_Facebookcommerce_Utils::FB_VARIANT_SIZE:
+						case \WC_Facebookcommerce_Utils::FB_VARIANT_COLOR:
+						case \WC_Facebookcommerce_Utils::FB_VARIANT_PATTERN:
+
+							$variant_array[] = [
+								'product_field' => $new_name,
+								'label'         => $label,
+								'options'       => $option_values,
+							];
+
 							$product_data[ $new_name ] = $option_values[0];
-							break;
+
+						break;
+
 						case WC_Facebookcommerce_Utils::FB_VARIANT_GENDER:
+
 							// If we can't validate the GENDER field, we'll fall through to the
 							// default case and set the gender into custom data.
 							if ( $product_data[ $new_name ] ) {
-								array_push(
-									$variant_array,
-									array(
-										'product_field' => $new_name,
-										'label'         => $label,
-										'options'       => $option_values,
-									)
-								);
-								break;
+
+								$variant_array[] = [
+									'product_field' => $new_name,
+									'label'         => $label,
+									'options'       => $option_values,
+								];
 							}
 
+						break;
+
 						default:
+
 							// This is for any custom_data.
 							if ( ! isset( $product_data['custom_data'] ) ) {
-								$product_data['custom_data'] = array();
+								$product_data['custom_data'] = [];
 							}
-								$product_data['custom_data'][ $new_name ]
-								= urldecode( $option_values[0] );
-							break;
+
+							$product_data['custom_data'][ $new_name ] = urldecode( $option_values[0] );
+
+						break;
 					}
+
 				} else {
-					WC_Facebookcommerce_Utils::log(
-						$this->get_id() . ': No options for ' . $orig_name
-					);
+
+					\WC_Facebookcommerce_Utils::log( $product->get_id() . ': No options for ' . $orig_name );
 					continue;
 				}
 			}
+
 			return $variant_array;
 		}
 
+
 		/**
-		 * Modify Woo variant/taxonomies for variable products to be FB compatible
-		 **/
+		 * Normalizes variable product variations data for Facebook.
+		 *
+		 * @param bool $feed_data whether this is used for feed data
+		 * @return array
+		 */
 		public function prepare_variants_for_group( $feed_data = false ) {
-			if ( ! WC_Facebookcommerce_Utils::is_variable_type(
-				$this->get_type()
-			) ) {
-				WC_Facebookcommerce_Utils::fblog(
-					'prepare_variants_for_group called on non-variable product'
-				);
-				return;
-			}
 
-			$variation_attributes = $this->get_variation_attributes();
-			if ( ! $variation_attributes ) {
-				return;
-			}
-			$final_variants = array();
+			/** @var \WC_Product_Variable $product */
+			$product        = $this;
+			$final_variants = [];
 
-			$attrs = array_keys( $this->get_attributes() );
-			foreach ( $attrs as $name ) {
-				$label = wc_attribute_label( $name, $this );
+			try {
 
-				if ( taxonomy_is_product_attribute( $name ) ) {
-					$key = $name;
-				} else {
-					// variation_attributes keys are labels for custom attrs for some reason
-					$key = $label;
+				if ( $product->is_type( 'variation' ) ) {
+					throw new \Exception( 'prepare_variants_for_group called on non-variable product' );
 				}
 
-				if ( ! $key ) {
-					WC_Facebookcommerce_Utils::fblog(
-						"Critical error: can't get attribute name or label!"
-					);
-					return;
+				$variation_attributes = $product->get_variation_attributes();
+
+				if ( ! $variation_attributes ) {
+					return [];
 				}
 
-				if ( isset( $variation_attributes[ $key ] ) ) {
-					// Array of the options (e.g. small, medium, large)
-					$option_values = $variation_attributes[ $key ];
-				} else {
-					WC_Facebookcommerce_Utils::log(
-						$this->get_id() . ': No options for ' . $name
-					);
-					continue; // Skip variations without valid attribute options
-				}
+				foreach ( array_keys( $product->get_attributes() ) as $name ) {
 
-				// If this is a wc_product_variable, check default attrib.
-				// If it's being used, show it as the first option on Facebook.
-				$first_option = $this->get_variation_default_attribute( $key );
-				if ( $first_option ) {
-					$idx = array_search( $first_option, $option_values );
-					unset( $option_values[ $idx ] );
-					array_unshift( $option_values, $first_option );
-				}
+					$label = wc_attribute_label( $name, $this );
 
-				if (
-				function_exists( 'taxonomy_is_product_attribute' ) &&
-				taxonomy_is_product_attribute( $name )
-				) {
-					$option_values = $this->get_grouped_product_option_names(
-						$key,
-						$option_values
-					);
-				}
+					if ( taxonomy_is_product_attribute( $name ) ) {
+						$key = $name;
+					} else {
+						// variation_attributes keys are labels for custom attrs for some reason
+						$key = $label;
+					}
 
-				// https://developers.facebook.com/docs/marketing-api/reference/product-variant/
-				// For API approach, product_field need to start with 'custom_data:'
-				// Clean up variant name (e.g. pa_color should be color)
-				$name = WC_Facebookcommerce_Utils::sanitize_variant_name( $name );
+					if ( ! $key ) {
+						throw new \Exception( "Critical error: can't get attribute name or label!" );
+					}
 
-				// For feed uploading, product field should remove prefix 'custom_data:'
-				if ( $feed_data ) {
-					$name = str_replace( 'custom_data:', '', $name );
-				}
-				array_push(
-					$final_variants,
-					array(
+					if ( isset( $variation_attributes[ $key ] ) ) {
+						// array of the options (e.g. small, medium, large)
+						$option_values = $variation_attributes[ $key ];
+					} else {
+						// skip variations without valid attribute options
+						WC_Facebookcommerce_Utils::log( $product->get_id() . ': No options for ' . $name );
+						continue;
+					}
+
+					// If this is a wc_product_variable, check default attribute.
+					// If it's being used, show it as the first option on Facebook.
+					if ( $first_option = $product->get_variation_default_attribute( $key ) ) {
+
+						$index = array_search( $first_option, $option_values, false );
+
+						unset( $option_values[ $index ] );
+
+						array_unshift( $option_values, $first_option );
+					}
+
+					if ( function_exists( 'taxonomy_is_product_attribute' ) && taxonomy_is_product_attribute( $name ) ) {
+						$option_values = $this->get_grouped_product_option_names( $key, $option_values );
+					}
+
+					// https://developers.facebook.com/docs/marketing-api/reference/product-variant/
+					// For API approach, product_field need to start with 'custom_data:'
+					// Clean up variant name (e.g. pa_color should be color)
+					$name = \WC_Facebookcommerce_Utils::sanitize_variant_name( $name );
+
+					// for feed uploading, product field should remove prefix 'custom_data:'
+					if ( $feed_data ) {
+						$name = str_replace( 'custom_data:', '', $name );
+					}
+
+					$final_variants[] = [
 						'product_field' => $name,
 						'label'         => $label,
 						'options'       => $option_values,
-					)
-				);
+					];
+				}
+
+			} catch ( \Exception $e ) {
+
+				\WC_Facebookcommerce_Utils::fblog( $e->getMessage() );
+
+				return [];
 			}
 
 			return $final_variants;
-
 		}
+
+
 	}
 
 endif;
