@@ -514,44 +514,57 @@ if ( ! class_exists( 'WC_Facebook_Product_Feed' ) ) :
 			'visibility,default_product,variant' . PHP_EOL;
 		}
 
+
 		/**
-		 * Assemble product payload in feed upload for initial sync.
-		 **/
-		private function prepare_product_for_feed(
-		$woo_product,
-		&$attribute_variants ) {
+		 * Assembles product payload in feed upload for initial sync.
+		 *
+		 * @param \WC_Facebook_Product $woo_product WooCommerce product object normalized by Facebook
+		 * @param array $attribute_variants passed by reference
+		 * @return string product feed line data
+		 */
+		private function prepare_product_for_feed( $woo_product, &$attribute_variants ) {
+
 			$product_data  = $woo_product->prepare_product( null, true );
 			$item_group_id = $product_data['retailer_id'];
+
 			// prepare variant column for variable products
 			$product_data['variant'] = '';
-			if (
-			WC_Facebookcommerce_Utils::is_variation_type( $woo_product->get_type() )
-			) {
+
+			if ( $woo_product->is_type( 'variation' ) ) {
+
 				$parent_id = $woo_product->get_parent_id();
 
 				if ( ! isset( $attribute_variants[ $parent_id ] ) ) {
-					$parent_product = new WC_Facebook_Product( $parent_id );
 
-					$gallery_urls                                  = array_filter( $parent_product->get_gallery_urls() );
-					$variation_id                                  = $parent_product->find_matching_product_variation();
-					$variants_for_group                            = $parent_product->prepare_variants_for_group( true );
-					$parent_attribute_values                       = array();
-					$parent_attribute_values['gallery_urls']       = $gallery_urls;
-					$parent_attribute_values['default_variant_id'] = $variation_id;
-					$parent_attribute_values['item_group_id']      =
-					WC_Facebookcommerce_Utils::get_fb_retailer_id( $parent_product );
+					$parent_product          = new \WC_Facebook_Product( $parent_id );
+					$gallery_urls            = array_filter( $parent_product->get_gallery_urls() );
+					$variation_id            = $parent_product->find_matching_product_variation();
+					$variants_for_group      = $parent_product->prepare_variants_for_group( true );
+					$parent_attribute_values = [
+						'gallery_urls'       => $gallery_urls,
+						'default_variant_id' => $variation_id,
+						'item_group_id'      => \WC_Facebookcommerce_Utils::get_fb_retailer_id( $parent_product ),
+					];
+
 					foreach ( $variants_for_group as $variant ) {
-						$parent_attribute_values[ $variant['product_field'] ] =
-						$variant['options'];
+						if ( isset( $variant['product_field'], $variant['options'] ) ) {
+							$parent_attribute_values[ $variant['product_field'] ] = $variant['options'];
+						}
 					}
+
 					// cache product group variants
 					$attribute_variants[ $parent_id ] = $parent_attribute_values;
+
+				} else {
+
+					$parent_attribute_values = $attribute_variants[ $parent_id ];
 				}
-				$parent_attribute_values = $attribute_variants[ $parent_id ];
-				$variants_for_item       =
-				$woo_product->prepare_variants_for_item( $product_data );
-				$variant_feed_column     = array();
+
+				$variants_for_item    = $woo_product->prepare_variants_for_item( $product_data );
+				$variant_feed_column  = [];
+
 				foreach ( $variants_for_item as $variant_array ) {
+
 					static::format_variant_for_feed(
 						$variant_array['product_field'],
 						$variant_array['options'][0],
@@ -559,8 +572,11 @@ if ( ! class_exists( 'WC_Facebook_Product_Feed' ) ) :
 						$variant_feed_column
 					);
 				}
-				if ( isset( $product_data['custom_data'] ) ) {
+
+				if ( isset( $product_data['custom_data'] ) && is_array( $product_data['custom_data'] ) ) {
+
 					foreach ( $product_data['custom_data'] as $product_field => $value ) {
+
 						static::format_variant_for_feed(
 							$product_field,
 							$value,
@@ -569,29 +585,23 @@ if ( ! class_exists( 'WC_Facebook_Product_Feed' ) ) :
 						);
 					}
 				}
+
 				if ( ! empty( $variant_feed_column ) ) {
-					$product_data['variant'] =
-					'"' . implode( ',', $variant_feed_column ) . '"';
+					$product_data['variant'] = '"' . implode( ',', $variant_feed_column ) . '"';
 				}
+
 				if ( isset( $parent_attribute_values['gallery_urls'] ) ) {
-					$product_data['additional_image_urls'] =
-					array_merge(
-						$product_data['additional_image_urls'],
-						$parent_attribute_values['gallery_urls']
-					);
+					$product_data['additional_image_urls'] = array_merge( $product_data['additional_image_urls'], $parent_attribute_values['gallery_urls'] );
 				}
+
 				if ( isset( $parent_attribute_values['item_group_id'] ) ) {
 					$item_group_id = $parent_attribute_values['item_group_id'];
 				}
 
-				$product_data['default_product'] =
-				$parent_attribute_values['default_variant_id'] == $woo_product->id
-				? 'default'
-				: '';
+				$product_data['default_product'] = $parent_attribute_values['default_variant_id'] == $woo_product->id ? 'default' : '';
 
 				// If this group has default variant value, log this product item
-				if ( isset( $parent_attribute_values['default_variant_id'] ) &&
-				! empty( $parent_attribute_values['default_variant_id'] ) ) {
+				if ( isset( $parent_attribute_values['default_variant_id'] ) && ! empty( $parent_attribute_values['default_variant_id'] ) ) {
 					$this->has_default_product_count++;
 				} else {
 					$this->no_default_product_count++;
@@ -600,7 +610,9 @@ if ( ! class_exists( 'WC_Facebook_Product_Feed' ) ) :
 
 			// log simple product
 			if ( ! isset( $product_data['default_product'] ) ) {
+
 				$this->no_default_product_count++;
+
 				$product_data['default_product'] = '';
 			}
 
@@ -632,6 +644,7 @@ if ( ! class_exists( 'WC_Facebook_Product_Feed' ) ) :
 			$product_data['default_product'] . ',' .
 			$product_data['variant'] . PHP_EOL;
 		}
+
 
 		private function create_feed() {
 			$result = $this->fbgraph->create_feed(
